--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -28,4 +28,5 @@
 #contact-us {
     text-align: center;
     font-family: sans-serif;
+    padding-top: 1vh;
 }
